test/domains/sungeun/sparse/interior.good
interior.chpl:3: In function 'my_interior':
interior.chpl:4: error: interior not supported on sparse domains
interior.chpl:10: Function 'my_interior' instantiated as: my_interior(D: DefaultSparseDom(1,int(64),domain(1,int(64),false)), off: int(64))
